# deterministic-memory-layer

./: .gitignore  CLAUDE.md  DML_PRD.md  README.md  TODO.md  agents.md  demo.py  demo_script.md  pyproject.toml
dml/: SKILL.md  __init__.py  __main__.py  chat_demo.py  cli.py  events.py  memory_api.py  monitor.py  policy.py  projections.py  replay.py  server.py  stores.py  tracing.py  visualization.py
dml/demo/: __init__.py  prompts.yaml  record.sh  script.md  tui.py  validator.py
docs/: DEMO_DESIGN.md  DEV_PLAN.md  FAQ.md  FUTURE_WORK.md  JUDGE_GUIDE.md  MCP_SERVER_PLAN.md  RESEARCH_NOTES.md  WHITE_PAPER.md
prompts/: tool_examples.md  travel_agent.md  workflows.md
tests/: __init__.py  test_events.py  test_mcp_integration.py  test_memory_api.py  test_policy.py  test_projections.py  test_replay.py  test_supersedes.py
