[project]
name = "deterministic-memory-layer"
version = "0.1.0"
description = "Event-sourced memory layer for AI agents with deterministic replay"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "mcp>=1.26.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=14.3.1",
    "weave>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
dml = "dml.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dml"]

[tool.hatch.build.targets.wheel.force-include]
"dml/demo/prompts.yaml" = "dml/demo/prompts.yaml"
"dml/demo/script.md" = "dml/demo/script.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
